--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "testing the whatsapp API",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
-    "start": "node index.js"
+    "test": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "twilio": "^3.55.1"
   }
